<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.caucse.Embedded_Final_Project1.MainActivity">

    <Space
        android:layout_height="24dp"
        android:layout_width="match_parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_subtitle"
        android:text="@string/dev_instruction"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_centerHorizontal="true"
            android:ems="5"
            android:inputType="number"
            android:textSize="20sp"
            android:text="100000"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_count_start"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/editText"
            android:textSize="20sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clock_display_title"
            android:text="@string/clock_instruction"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clock_form"
                    android:textSize="20sp"
                    android:id="@+id/button_clock_form"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_normal_form"
                    android:layout_toRightOf="@+id/button_clock_form"
                    android:textSize="20sp"
                    android:text="@string/normal_form"/>

            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev_name"
        android:textAlignment="center"
        android:textSize="24dp" />


</LinearLayout>
